added put, post, and get bi email functions
